<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ErrorMessage">ErrorMessage</string>
    <string name="SmsView">SmsView</string>
    <string name="hello">Hello World, BackRes!</string>
    <string name="app_name">BackRes</string>
<color name="MyColor">#332234</color>
<color name="Mycolor1">#3399CC</color>
<string name="Text">Select the data to backup</string>
<string name="ButtonHandler">SubmitClickHandler</string>
<string name="Take_Backup">Backup</string>
<string name="Contacts">Contacts</string>
<string name="Sms">Sms</string>
<string name="ContactName">Name</string>

<string name="Calender">Calender</string>
<string name="Bookmarks">Bookmarks</string>
<string name="title">title</string>
<string name="url">url</string>
    <string name="Restore">Restore</string>
    <string name="RestoreButtonHandler">RestoreClickHandler</string>
    <color name="color2">#CDCC</color>
</resources>
